--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-description: The official website by Bob Pony
+description: The official website of IBSupport.PM
 layout: default
 permalink: /
 title: Home
@@ -17,15 +17,6 @@ title: Home
   <p class="subtitle is-spaced"></p>
   <div class="columns">
     <div class="column is-three-quarters-desktop">
-      <div class="box has-text-centered">
-        <h2 class="title is-4">Watch one of the newest videos</h2>
-        <figure class="image is-16by9">
-        <iframe class="has-ratio" src="https://www.youtube-nocookie.com/embed/3PS1sErFL4s?modestbranding=1&disablekb=1&cc_load_policy=1" frameborder="0"></iframe>      
-        </figure>
-        <br />
-        <a href="https://youtube.com/BobPony/videos" class="button is-primary is-rounded">View more videos</a>
-              <a href="https://youtube.com/BobPony" class="button is-danger is-rounded">Subscribe</a>
-      </div>
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
@@ -33,9 +24,9 @@ title: Home
           </div>
           <div class="column">
             <h2 class="title is-4">Downloads</h2>
-            <h3 style="opacity: 0.6;" class="subtitle is-6">Download files from our massive collection.</h3>
+            <h3 style="opacity: 0.6;" class="subtitle is-6">Download files from our massive collection related to IB Diploma.</h3>
             <a href="/downloads" class="button is-primary is-rounded">Downloads</a>
-            <a href="https://dl.bobpony.com" class="button is-rounded">Directory Listing (Advanced)</a>
+            <a href="https://files.ibsupport.pm" class="button is-rounded">Directory Listing</a>
           </div>
         </div>
       </div>
@@ -49,18 +40,15 @@ title: Home
               <span class="icon">
                 <i class="fa-solid fa-chart-line"></i>
               </span>
-              <span>Popular Downloads</span>
+              <span>Useful links</span>
             </span>
           </p>
         </header>
         <div class="card-content">
-          <a href="https://dl.bobpony.com/windows/10/en-us_windows_10_enterprise_ltsc_2021_x64_dvd_d289cf96.iso" class="button is-rounded is-fullwidth">Windows 10 LTSC 2021 x64</a>
-          <a href="https://dl.bobpony.com/windows/7/en_windows_7_with_sp1_x64.iso" class="button is-rounded is-fullwidth">Windows 7 SP1 x64</a>
-          <a href="https://dl.bobpony.com/windows/10/en-us_windows_10_22h2_x64.iso" class="button is-rounded is-fullwidth">Windows 10 22H2 x64</a>
-          <a href="https://dl.bobpony.com/windows/10/en_windows_10_enterprise_2016_ltsb_x64_dvd_9059483.iso" class="button is-rounded is-fullwidth">Windows 10 LTSB 2016 x64</a>
-          <a href="https://dl.bobpony.com/windows/10/en_windows_10_enterprise_ltsc_2019_x64_dvd_5795bb03.iso" class="button is-rounded is-fullwidth">Windows 10 LTSC 2019 x64</a>
-          <a href="https://dl.bobpony.com/windows/11/en-us_windows_11_22h2_x64.iso" class="button is-rounded is-fullwidth">Windows 11 22H2 x64</a>
-          <a href="https://dl.bobpony.com/windows/vista/en_windows_vista_sp2_x64_dvd_342267.iso" class="button is-rounded is-fullwidth">Windows Vista SP2 x64</a>
+          <a href="https://qbv5.ibsupport.pm" class="button is-rounded is-fullwidth">QuestionBank v5</a>
+          <a href="https://sme.ibsupport.pm" class="button is-rounded is-fullwidth">SaveMyExams</a>
+          <a href="https://think.ibsupport.pm" class="button is-rounded is-fullwidth">ThinkIB</a>
+          <a href="https://study.ibsupport.pm" class="button is-rounded is-fullwidth">StudyIB HL</a>
         </div>
       </div>
     </div>
