--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 ---
-description: Contact Bob Pony
+description: Contact IBSupport
 layout: default
 permalink: /contact/
 title: Contact
@@ -7,10 +7,10 @@ title: Contact
 <section class="hero is-info is-bold">
   <div class="hero-body container has-text-centered">
     <p class="title">
-      You're contacting Bob Pony
+      You're contacting IBSupport Admin
     </p>
     <p class="subtitle">
-      Got something to say? Feel free to send your message.
+      Feel free to send your message.
     </p>
   </div>
 </section>
@@ -18,37 +18,5 @@ title: Contact
 <div class="container">
 <br />
 <div class="box">
-<form
-  action="https://formspree.io/f/xjvllvwb"
-  method="POST"
->
-  <div class="field">
-  <p class="control has-icons-left has-icons-right">
-    <input class="input is-rounded" type="email" name="email" placeholder="Email">
-    <span class="icon is-small is-left">
-      <i class="fas fa-envelope"></i>
-    </span>
-  </p>
-  </div>
-  <div class="field">
-  <p class="control has-icons-left has-icons-right">
-    <input class="input is-rounded" name="message" placeholder="Message" autocomplete="off">
-    <span class="icon is-small is-left">
-      <i class="fas fa-envelope"></i>
-    </span>
-  </p>
-  </div>
-   <div class="g-recaptcha" data-sitekey="6LfechcUAAAAAKoMsJezng5Hf9Cm9i4fMGmRirO2" data-callback="callback"></div>
-   <noscript><p>To send your message, please enable JavaScript!</p></noscript>
-   <br />
-  <button id="submit-button" class="button is-info is-rounded" type="submit" disabled>Send your message</button>
-</form>
+  <p>Contact: admin@ibsupport.pm</p>
 </div>
-</div>
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<script type="text/javascript">
-      function callback() {
-        const submitButton = document.getElementById("submit-button");
-        submitButton.removeAttribute("disabled");
-      }
-</script>
