--- a/downloads/index.html
+++ b/downloads/index.html
@@ -42,7 +42,7 @@ layout: default
                                 <select class="dropdown-item" name="Product version" id="version" autocomplete="off"
                                     onchange="updateEditions()">
                                     <option disabled selected value="placeholder">
-                                        ---- Choose version/type ----
+                                        ---- Choose option ----
                                     </option>
                                 </select>
                             </p>
@@ -61,8 +61,8 @@ layout: default
                             </p>
                             <br /><br />
                             <div class="notification">
-                                <i class="fa-solid fa-circle-info"></i> If you need to enter a password, try
-                                <span style="font-family: monospace">bigcdn</span>.
+                                <i class="fa-solid fa-circle-info"></i> If you need to enter a password, go to r/pirateIB or contact
+                                <span style="font-family: monospace">aimless#9999 at Discord</span>.
                             </div>
                         </div>
                     </div>
