--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@ title: Home
             <a href="/downloads" class="button is-primary is-rounded">Downloads</a>
             <a href="https://files.ibsupport.pm" class="button is-rounded">Directory Listing</a>
           </div>
+          <div class="column is-narrow">
+            <p class="has-text-centered"><i class="fas fa-life-ring fa-4x"></i></p>
+          </div>
+          <div class="column">
+            <h2 class="title is-4">Discord Support Server</h2>
+            <h3 style="opacity: 0.6;" class="subtitle is-6">Ask questions about IB Resources on Discord Server.</h3>
+            <a href="https://discord.gg/KBmXMWm8BR" class="button is-primary is-rounded">Go to 'IB Support Team' Discord server</a>
+          </div>
         </div>
       </div>
       
