--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@ title: Home
             <h3 style="opacity: 0.6;" class="subtitle is-6">Ask questions about IB Resources on Discord Server.</h3>
             <a href="https://discord.gg/KBmXMWm8BR" class="button is-primary is-rounded">Go to 'IB Support Team' Discord server</a>
           </div>
+          <br>
+          <div class="column is-narrow">
+            <p class="has-text-centered"><i class="fas fa-telegram fa-4x"></i></p>
+          </div>
+          <div class="column">
+            <h2 class="title is-4">Official IB Documents (2) Team Telegram Channel</h2>
+            <h3 style="opacity: 0.6;" class="subtitle is-6">Check out IB Documents (2) Team Telegram Channel</h3>
+            <a href="https://t.me/ibdocs_2" class="button is-primary is-rounded">Go to 'IB Documents (2) Team' Telegram Channel</a>
+          </div>
         </div>
       </div>
       
