--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Home
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
-            <p class="has-text-centered"><i class="fas fa-telegram fa-4x"></i></p>
+            <p class="has-text-centered"><i class="fa fa-telegram fa-4x"></i></p>
           </div>
           <div class="column">
             <h2 class="title is-4">Official IB Documents (2) Team Telegram Channel</h2>
@@ -29,7 +29,6 @@ title: Home
           </div>
         </div>
       </div>
-      <br />
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
