--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ title: Home
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
-            <p class="has-text-centered"><i class="fas fa-circle-check-o fa-4x"></i></p>
+            <p class="has-text-centered"><i class="fas fa-bookmark fa-4x"></i></p>
           </div>
           <div class="column">
             <h2 class="title is-4">Official IB Documents (2) Team Telegram Channel</h2>
             <h3 style="opacity: 0.6;" class="subtitle is-6">Check out IB Documents (2) Team Telegram Channel</h3>
-            <a href="https://t.me/ibdocs_2" class="button is-primary is-rounded">Go to 'IB Documents (2) Team' Telegram Channel</a>
+            <a href="https://t.me/ibdocs_2" class="button is-primary is-rounded">Go to Telegram Channel</a>
           </div>
         </div>
       </div>
