--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ title: Home
           </div>
         </div>
       </div>
+
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
@@ -40,6 +41,11 @@ title: Home
             <a href="/downloads" class="button is-primary is-rounded">Downloads</a>
             <a href="https://files.ibsupport.pm" class="button is-rounded">Directory Listing</a>
           </div>
+        </div>
+      </div>
+      
+      <div class="box smallbox">
+        <div class="columns">
           <div class="column is-narrow">
             <p class="has-text-centered"><i class="fas fa-life-ring fa-4x"></i></p>
           </div>
