--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 <section class="hero is-info is-bold">
   <div class="hero-body container has-text-centered">
     <p class="title">
-      Welcome home!
+      Welcome to IBSupport.PM!
     </p>
   </div>
 </section>
