--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 permalink: /
 title: Home
 ---
+<body tyle="background-color:aquamarine;>
 <section class="hero is-info is-bold">
   <div class="hero-body container has-text-centered">
     <p class="title">
@@ -82,3 +83,4 @@ title: Home
 </div>
 </div>
 </div>
+</body>
