--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@ title: Home
           </div>
         </div>
       </div>
+      
+      <div class="box smallbox">
+        <div class="columns">
+          <div class="column is-narrow">
+            <p class="has-text-centered"><i class="fa-brands fa-reddit fa-4x"></i></p>
+          </div>
+          <div class="column">
+            <h2 class="title is-4">Reddit r/pirateIB</h2>
+            <h3 style="opacity: 0.6;" class="subtitle is-6">Reddit community that is dedicated to pirate IB Resources.</h3>
+            <a href="https://www.reddit.com/r/pirateIB/" class="button is-primary is-rounded">Go to r/pirateIB</a>
+          </div>
+        </div>
+      </div>
 
       <div class="box smallbox">
         <div class="columns">
@@ -39,7 +52,7 @@ title: Home
             <h2 class="title is-4">Downloads</h2>
             <h3 style="opacity: 0.6;" class="subtitle is-6">Download files from our massive collection related to IB Diploma.</h3>
             <a href="/downloads" class="button is-primary is-rounded">Downloads</a>
-            <a href="https://files.ibsupport.pm" class="button is-rounded">Directory Listing</a>
+            <a href="https://files.ibsupport.pm" class="button is-rounded">Complete Repository</a>
           </div>
         </div>
       </div>
