--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ title: Home
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
-            <p class="has-text-centered"><i class="fa-regular fa-folders fa-4x"></i></p>
+            <p class="has-text-centered"><i class="fas fa-folder fa-4x"></i></p>
           </div>
           <div class="column">
             <h2 class="title is-4">IBResources</h2>
@@ -138,7 +138,7 @@ title: Home
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
-            <p class="has-text-centered"><i class="fa-regular fa-flask fa-4x"></i></p>
+            <p class="has-text-centered"><i class="fas fa-flask fa-4x"></i></p>
           </div>
           <div class="column">
             <h2 class="title is-4">IB Review Resources [Sciences]</h2>
@@ -151,7 +151,7 @@ title: Home
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
-            <p class="has-text-centered"><i class="fa-regular fa-money-bill-trend-up fa-4x"></i></p>
+            <p class="has-text-centered"><i class="fas fa-money-bill-trend-up fa-4x"></i></p>
           </div>
           <div class="column">
             <h2 class="title is-4">IB Review Resources [Economics]</h2>
