--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ title: Home
       <div class="box smallbox">
         <div class="columns">
           <div class="column is-narrow">
-            <p class="has-text-centered"><i class="fa-duotone fa-note fa-4x"></i></p>
+            <p class="has-text-centered"><i class="fas fa-memo-pad fa-4x"></i></p>
           </div>
           <div class="column">
             <h2 class="title is-4">Tick Ninja</h2>
