--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ title: Home
           <div class="column">
             <h2 class="title is-4">Google Doc</h2>
             <h3 style="opacity: 0.6;" class="subtitle is-6">A compilation of useful resources for IB students, including YouTube channels, useful websites, etc.</h3>
-            <a href="https://controlc.com/2349e18a" class="button is-primary is-rounded">Check it out!</a>
+            <a href="https://redr.ibsupport.pm" class="button is-primary is-rounded">Check it out!</a>
           </div>
         </div>
       </div>
