--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 <section class="hero is-info is-bold">
   <div class="hero-body container has-text-centered">
     <p class="title">
-      Welcome to IBSupport.PM!
+      Welcome to IBSupport.PM!<br>N22 Papers are now available at repo!
     </p>
   </div>
 </section>
@@ -189,6 +189,7 @@ title: Home
         </header>
         <div class="card-content">
           <a href="https://qbv5.ibsupport.pm" class="button is-rounded is-fullwidth">QuestionBank v5</a>
+          <a href="https://n22.ibsupport.pm" class="button is-rounded is-fullwidth">N22 Papers</a>     
           <a href="https://sme.ibsupport.pm" class="button is-rounded is-fullwidth">SaveMyExams</a>
           <a href="https://think.ibsupport.pm" class="button is-rounded is-fullwidth">ThinkIB</a>
           <a href="https://study.ibsupport.pm" class="button is-rounded is-fullwidth">StudyIB HL</a>
